--- a/style.css
+++ b/style.css
@@ -8,18 +8,18 @@
 body
 {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 .one
 {
-    border: 1px solid blue;
-    height: 70%;
+    height: 80%;
+    width: 100%;
+    background-color: #ff4c68;
 }
 header
 {
 display: flex;
 height: 10%;
-border: 1px solid red;
 align-items: center;
 justify-content: space-around;
 }
@@ -40,7 +40,73 @@ list-style: none;
 .sec1-content
 {
     display: flex;
+    flex-wrap: wrap;
+    border: 2px solid black;
     justify-content: center;
     align-items: center;
+    height: 100%;
+}
+.sec1-txt
+{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.txt-one
+{
+    font-weight: 900;
+    font-size: max(4vw,15px,3vw);
+    color: white;
+}
+.store
+{
+    display: flex;
+    width: 100%;
+    margin-top: 5%;
+    align-items: center;
+    text-align: center;
+    gap: 5%;
+    font-weight: 600;
+    font-size: 1em;
+
+    
+}
+.playstore
+{
+    display: flex;
+    align-items: center;
+    border: 1px solid gray;
+    padding: 5px;
+    color: white;
+}
+.apple
+{
+    display: flex;
+    align-items: center;
+    border: 1px solid gray;
+    padding:5px;
+    color: white;
+}
+.sec1-img
+{
+    height: 100%;
+    position: relative;
+}
+.sec1-img>img
+{
+    height: 100%;
+    position: absolute;
+    top: 20%;
+    transform: scale(1.2);
+    transform: rotate(20deg);
+    z-index: 1;
+}
+.two
+{
     height: 70%;
+    position: relative;
+    z-index:1;
+    background-color: white;
 }
